<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/privacy_policy_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/privacy_policy_info" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_half"
        android:layout_marginBottom="50dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/privacy_policy_vice_info" />

    <TextView
        android:id="@+id/privacy_policy_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:paddingStart="30dp"
        android:paddingTop="@dimen/common_padding"
        android:text="@string/privacy_policy_link"
        android:paddingEnd="30dp"
        android:paddingBottom="@dimen/common_padding"
        android:textColor="@color/common_main_color" />

    <include layout="@layout/divider_line_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/privacy_policy_quit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/common_padding"
            android:text="@string/privacy_policy_quit" />

        <TextView
            android:id="@+id/privacy_policy_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/common_padding"
            android:text="@string/privacy_policy_agree"
            android:textColor="@color/common_main_color" />
    </LinearLayout>
</LinearLayout>
