<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="225dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/bg_person_info" />

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="22dp"
            android:src="@mipmap/img_head" />

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="26dp"
            android:layout_toRightOf="@+id/iv_head"
            android:text="昵称"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_device_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="65dp"
            android:layout_toRightOf="@+id/iv_head"
            android:text="@string/intelligent_detector_devices"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/ll_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_device_number"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="35dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                app:hintTextAppearance="@style/common_text_input_layout_style">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/text_input_style_item_et"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/hint_phone"
                app:hintTextAppearance="@style/common_text_input_layout_style">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phone"
                    style="@style/text_input_style_item_et" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/hint_administrative_region"
                app:hintTextAppearance="@style/common_text_input_layout_style">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_administrative_region"
                    style="@style/text_input_style_item_et"
                    android:focusable="false"
                    android:text="@string/hint_select_district" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/hint_area"
                app:hintTextAppearance="@style/common_text_input_layout_style">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_area"
                    style="@style/text_input_style_item_et"
                    android:focusable="false"
                    android:text="@string/hint_select_area" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/hint_addr"
                app:hintTextAppearance="@style/common_text_input_layout_style">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_address"
                    style="@style/text_input_style_item_et"
                    android:maxLength="40"
                    android:text="@string/hint_address" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_below="@+id/ll_01"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn_keep_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/btn_white_32"
                android:text="@string/btn_keep_change"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>